--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongoose": "^8.0.2",
+    "moongose": "^1.0.0",
     "morgan": "~1.9.1",
     "pug": "^3.0.2"
   }
